--- a/WebContent/css/index.css
+++ b/WebContent/css/index.css
@@ -60,6 +60,7 @@ body{
     width: 100px;
     height: 25px;
     font-size: larger;
+    outline:none;
 }
 #form > div > input[type="submit"]:hover{
 	-webkit-box-shadow: 0px 0px 3px 0px rgba(0,0,0,0.55);
