--- a/WebContent/css/header.css
+++ b/WebContent/css/header.css
@@ -4,9 +4,9 @@ header{
 	justify-content:space-between;
 	padding:0 3%;
 	height:12%;
-	-webkit-box-shadow: 0px 1px 0px 0px rgba(119,138,61,.25);
-	-moz-box-shadow: 0px 1px 0px 0px rgba(119,138,61,.25);
-	box-shadow: 0px 1px 0px 0px rgba(119,138,61,.25);
+	-webkit-box-shadow: 0px 1px 0px 0px rgba(119,138,61,.1);
+	-moz-box-shadow: 0px 1px 0px 0px rgba(119,138,61,.1);
+	box-shadow: 0px 1px 0px 0px rgba(119,138,61,.1);
 }
 header > div.user{
     display:flex;
@@ -25,18 +25,13 @@ header > h1{
 	letter-spacing:10px;
 	font-family:STLiti;
 }
-header > div.user > span{
-	margin-left:7px;
+header > div.user > .name{
+	margin:0 5px 0 7px;
 	color:crimson;
 }
-header > div.user > div.logout{
-	display:none;
-    position: absolute;
-    top: 18px;
-    left: 5px;
-    padding: 6px 2px 3px 2px;
-    -webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
-	-moz-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
-	box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
-	z-index:1;
+header > div.user > .logout{
+	margin-left:5px;
+}
+header > div.user > .logout:hover{
+	color:crimson;
 }
