--- a/WebContent/css/pagination.css
+++ b/WebContent/css/pagination.css
@@ -4,6 +4,7 @@ nav {
 	display:flex;
     flex-direction:row-reverse;
     align-items:center;
+    justify-content:center;
 }
 nav > form#addNew > input{
 	background:#536323;
