--- a/WebContent/css/main_info.css
+++ b/WebContent/css/main_info.css
@@ -2,38 +2,36 @@ div.main{
 	display:flex;
 	align-items:center;
 	width:100%;
-	height:90%;
+	height:100%;
 }
-#form1 > div > label,
-#form1 > div > span.info{
+form > div > label,
+form > div > span.info{
 	font-size:larger;
 	font-weight:500;
 }
-#form1 > div > span.info{
+form > div > span.info{
 	display:inline-block;
-	width:30%;
+	width:25%;
 	color:black;
 	text-align:justify;
 	text-align-last:justify;
 }
-#form1 > div > input{
+form > div > input{
 	margin-left:10px;
 	padding:1px;
 }
-#form1 > div{
+form > div{
 	display:flex;
 	margin: 0 10px;
 	padding:10px;
 }
-#form1{
-	-webkit-box-shadow: 0px 0px 2px 0px rgba(119,138,61,0.75);
-	-moz-box-shadow: 0px 0px 2px 0px rgba(119,138,61,0.75);
-	box-shadow: 0px 0px 2px 0px rgba(119,138,61,0.75);
+form{
+	border:1px solid #DDD;
 	border-radius:10px;
 	margin-left:30%;
-	padding:25px 75px;
+	padding:25px 87px;
 }
-#form1 > div.submit > input{
+form > div.submit > input{
 	background-color:#536323;
     border: none;
     width: 35%;
@@ -41,22 +39,22 @@ div.main{
     color: white;
     font-size: larger;
 }
-#form1 > div.submit > input:focus{
+form > div.submit > input:focus{
 	outline:none;
 }
-#form1 > div.submit > input:hover{
+form > div.submit > input:hover{
 	-webkit-box-shadow: 0px 0px 3px 0px rgba(0,0,0,0.55);
 	-moz-box-shadow: 0px 0px 3px 0px rgba(0,0,0,0.55);
 	box-shadow: 0px 0px 3px 0px rgba(0,0,0,0.55);
 }
-#form1 > div.submit{
+form > div.submit{
     flex-wrap:no-wrap;
     justify-content: space-around;
 }
-#form1 > div.password{
+form > div.password{
 	position:relative;
 }
-#form1 > div.password > #eye{
+form > div.password > #eye{
 	position: absolute;
     height: 40%;
     top: 30%;
@@ -66,7 +64,7 @@ div.main{
 	display:none;
 	position:absolute;
 	top:-10%;
-	right:-10%;
+	right:-8%;
 	z-index:2;
 	color:grey;
 	-webkit-box-shadow: 0px 0px 1px 0px rgba(0,0,0,0.75);
@@ -80,4 +78,16 @@ div.main{
 	font-size: 17px;
     margin-left: 30%;
     margin-top: 10%;
+}
+.main > form > .hint > span{
+	color:brown;
+	vertical-align: middle;
+	font-size:15px;
+}
+.main > form > .hint{
+	display:block;
+}
+.main > form > .hint > span > img{	
+	width:12px;
+	
 }
