--- a/WebContent/css/student/main_exam.css
+++ b/WebContent/css/student/main_exam.css
@@ -1,9 +1,25 @@
 div.main{
-	display:flex;
-	align-items:center;
-	justify-content:center;
 	width:100%;
 	height:100%;
+}
+div.main > div.hint{
+	text-align: center;
+	color:brown;
+}
+.hint > span > img{
+	width:13px;
+}
+.hint > span:nth-child(1){
+	vertical-align:middle;
+}
+.hint > span:nth-child(2){
+	font-size:15px;
+}
+div.main > div.hint,
+div.main > ul.paper_type{
+	margin-left:50%;
+	transform:translateX(-50%);
+	margin-top:50px;
 }
 div.main > ul.paper_type{
 	text-align:center;
@@ -17,14 +33,12 @@ ul.paper_type > li{
 	width:40%;
 	height:100%;
 	border-radius:7px;
-	-webkit-box-shadow: 0px 0px 2px 0px rgba(119,138,61,0.75);
-	-moz-box-shadow: 0px 0px 2px 0px rgba(119,138,61,0.75);
-	box-shadow: 0px 0px 2px 0px rgba(119,138,61,0.75);
+	border:1px solid #DDD;
 }
 ul.paper_type > li:hover{
-	-webkit-box-shadow: 0px 0px 5px 1px rgba(119,138,61,0.75);
-	-moz-box-shadow: 0px 0px 5px 1px rgba(119,138,61,0.75);
-	box-shadow: 0px 0px 5px 1px rgba(119,138,61,0.75);
+	-webkit-box-shadow: 0px 0px 2px 1px rgba(119,138,61,0.75);
+	-moz-box-shadow: 0px 0px 2px 1px rgba(119,138,61,0.75);
+	box-shadow: 0px 0px 2px 1px rgba(119,138,61,0.75);
 }
 ul.paper_type > li > span{
 	display:inline-block;
