--- a/WebContent/css/student/main_paper_one.css
+++ b/WebContent/css/student/main_paper_one.css
@@ -1,7 +1,28 @@
 div.main{
-	display:flex;
-	align-items:center;
-	justify-content:center;
 	width:100%;
 	height:90%;
+	overflow-y:scroll;
+}
+.selectionContainer > ul > li{
+	list-style:none;
+}
+.selectionContainer > ul{
+/* 	padding:10px; */
+}
+
+#commit_paper{
+	position:absolute;
+	bottom:10%;
+	left:50%;
+	background:#536323;
+	color:white;
+	border:none;
+	outline:none;
+	padding:3px 10px;
+	margin-right: 50px;
+}
+#commit_paper:hover{
+	-webkit-box-shadow: 0px 0px 2px 0px rgba(0,0,0,0.75);
+	-moz-box-shadow: 0px 0px 2px 0px rgba(0,0,0,0.75);
+	box-shadow: 0px 0px 2px 0px rgba(0,0,0,0.75);
 }
