--- a/WebContent/css/teacher/main_selection.css
+++ b/WebContent/css/teacher/main_selection.css
@@ -33,4 +33,15 @@ div.row > ul{
 	margin-right:20px;
 }
 
-
+.main > form > .hint > span{
+	color:brown;
+	vertical-align: middle;
+	font-size:15px;
+}
+.main > form > .hint{
+	display:block;
+}
+.main > form > .hint > span > img{	
+	width:12px;
+	
+}
