--- a/WebContent/css/teacher/main_short.css
+++ b/WebContent/css/teacher/main_short.css
@@ -1,8 +1,48 @@
 div.main{
-	padding-top:17px;
-	display:flex;
-	align-items:center;
-	justify-content:center;
 	width:100%;
 	height:90%;
+	overflow-y:scroll;
+}
+div.main > div.row.five{
+	height:40%;
+	padding-left:20px;
+}
+div.main > div.row.ten{
+	height:60%;
+	padding-left:20px;
+}
+div.main > div.row.fifteen{
+	height:80%;
+	padding-left:20px;
+}
+div.row >  ul > li{
+	list-style:none;
+	margin:2px 0;
+}
+.row > ul > li > button{
+	background:#D4D8C7;
+	border:none;
+	width:5%;
+	padding:2px;
+	border-radius:1px;
+	margin:5px 15px 0 0;
+	color:brown;
+	outline:none;
+}
+.row > ul > li > button:hover{
+	-webkit-box-shadow: 0px 0px 4px 0px rgba(0,0,0,0.75);
+	-moz-box-shadow: 0px 0px 4px 0px rgba(0,0,0,0.75);
+	box-shadow: 0px 0px 4px 0px rgba(0,0,0,0.75);
+}
+.main > form > .hint > span{
+	color:brown;
+	vertical-align: middle;
+	font-size:15px;
+}
+.main > form > .hint{
+	display:block;
+}
+.main > form > .hint > span > img{	
+	width:12px;
+	
 }
