--- a/WebContent/css/student/main_exam_result.css
+++ b/WebContent/css/student/main_exam_result.css
@@ -1,13 +1,22 @@
- div.main{
- 	width:100%;
- 	height:100%;
- 	overflow-y:scroll;
- }
- .selectionRow > li.analysis{
- 	color:brown;
- 	cursor: pointer;
- }
-  .selectionRow > li.analysis >div{
- 	display:none;
- }
+div.main{
+	width:100%;
+	height:100%;
+	overflow-y:scroll;
+}
+.selectionRow > li.analysis > span,
+.judgementRow > li.analysis>span,
+.shortFiveRow > li.analysis >span,
+.shortTenRow > li.analysis >span,
+.shortFifteenRow > li.analysis >span
+{
+	color:brown;
+	cursor: pointer;
+}
+.selectionRow > li.analysis >div,
+.judgementRow > li.analysis >div,
+.shortFiveRow > li.analysis >div,
+.shortTenRow > li.analysis >div,
+.shortFifteenRow > li.analysis >div{
+	display:none;
+}
  
