--- a/WebContent/css/main_info.css
+++ b/WebContent/css/main_info.css
@@ -51,7 +51,8 @@ form > div.submit{
     flex-wrap:no-wrap;
     justify-content: space-around;
 }
-form > div.password{
+form > div.password,
+form > div.username{
 	position:relative;
 }
 form > div.password > #eye{
@@ -90,4 +91,23 @@ form > div.password > #eye{
 .main > form > .hint > span > img{	
 	width:12px;
 	
+}
+sup{
+	position:absolute;
+	color:red;
+	font-weight:600;
+	right: 1.5%;
+    top: 20%;
+}
+select{
+	width: 168px;
+    margin-left: 8px;
+}
+.class > sup{
+	right: 34.5%;
+    top: 49%;
+}
+.grade > sup{
+	right: 34.5%;
+    top: 56%;
 }
