--- a/WebContent/css/manager/main.css
+++ b/WebContent/css/manager/main.css
@@ -19,7 +19,7 @@ div.table{
 	height:100%;
 }
 div.table > .block{
-	width:33.3333%;
+	width:33.33333%;
 	height:50%;
 	display:flex;
 	flex-direction:column;
@@ -37,7 +37,8 @@ form.block_modify{
 .block > dl > dd,
 .block > dl > dt{
 	float:left;
-	margin:2px 0;
+	margin:4px 0;
+	height:17px;
 }
 .block > dl > dt{
 	width:80%;
@@ -59,7 +60,7 @@ form.block_modify{
 	width:30%;
 	padding:2px;
 	border-radius:1px;
-	margin:5px 15px 0 0;
+	margin:7px 15px 0 0;
 	color:brown;
 	outline:none;
 }
@@ -90,11 +91,13 @@ form.block_modify{
 	border-radius: 4px;
 }
 form.block_modify > div{
-	margin:7px 0;
+	margin:10px 0;
 }
 form.block_modify > div > span{
 	display:inline-block;
 	width:38px;
+	height:20px;
+	line-height:20px;
 	text-align:justify;
 	text-align-last:justify;
 }
@@ -104,7 +107,7 @@ form.block_modify > #handlePass{
 form.block_modify #eye{
 	position:absolute;
 	width:7%;
-	right:0;
+	right:2%;
 	top:14%;
 }
 form.block_modify #set_pass{
@@ -132,4 +135,11 @@ form.block_modify > .buttons > input{
 	background:#D4D8C7;
 	padding:2px 10px; 
 	color:brown;
+}
+select{
+	width: 166px;
+    height: 20px;
+}
+sup{
+	color:red;
 }
