--- a/WebContent/css/paper.css
+++ b/WebContent/css/paper.css
@@ -10,7 +10,7 @@ li.analysis > div{display:none;}
 div.main li{list-style:none;}
 div.main h3{padding-bottom:10px;}
 div.main h2{padding-top:10px;}
-div.main input{margin-right:3px;}
+div.main input[type="radio"]{margin-right:3px;}
 div.main .container{background:white;width:75%;margin:20px auto;padding:20px;}
 div.main .finalScore{text-align:center;}
 .selectionContainer,
@@ -21,5 +21,6 @@ div.main .finalScore{text-align:center;}
 .shortContainer>div>ul>li{margin:7px 0;}
 .selectionRow > li > div{margin:3px 0;}
 .judgementRow > li:nth-child(2) > input.option2{margin-left:30px;}
-
-
+.shortContainer li>div.answer{margin-top:7px;}
+input{cursor:pointer;}
+sup{color:red;}
