--- a/WebContent/css/student/main_exam.css
+++ b/WebContent/css/student/main_exam.css
@@ -24,9 +24,9 @@ div.main > ul.paper_type{
 div.main > ul.paper_type{
 	text-align:center;
 	display:flex;
-	justify-content:space-between;
-	width:50%;
-	height:30%;
+	justify-content:center;
+/* 	width:50%; */
+/* 	height:30%; */
 }
 ul.paper_type > li{
 	list-style:none;
@@ -34,6 +34,7 @@ ul.paper_type > li{
 	height:100%;
 	border-radius:7px;
 	border:1px solid #DDD;
+	padding:10px;
 }
 ul.paper_type > li:hover{
 	-webkit-box-shadow: 0px 0px 2px 1px rgba(119,138,61,0.75);
@@ -44,7 +45,8 @@ ul.paper_type > li > span{
 	display:inline-block;
 	width:100%;
 	color:grey;
+	margin:3px 0;
 }
 ul.paper_type > li > h2{
-	margin:20px 0;
+	margin:10px 0;
 }
