--- a/WebContent/css/template/question_form.css
+++ b/WebContent/css/template/question_form.css
@@ -40,3 +40,7 @@ div.main > form > div > input:hover{
 	-moz-box-shadow: 0px 0px 4px 0px rgba(0,0,0,0.75);
 	box-shadow: 0px 0px 4px 0px rgba(0,0,0,0.75);
 }
+sup{
+	color:red;
+	font-weight:600;
+}
